--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -4,5 +4,31 @@
   "news": "News",
   "privacyPolicy": "Privacy Policy",
   "termsOfService": "Terms of Service",
-  "OkanAssist_announcement": "We are thrilled to announce the launch of OkanAssist, your personal AI agent to help you track daily expenses and tasks effortlessly. Stay organized and in control of your finances and productivity."
+  "announcements": "Announcements",
+  "contactUs": "Contact Us",
+  "slogan":"Fitting AI to meet your needs",
+  "OkanAssist_announcement": "We are thrilled to announce the launch of OkanAssist, your personal AI agent to help you track daily expenses and tasks effortlessly. Stay organized and in control of your finances and productivity.",
+  "about_founder":"With a strong background in computer engineering and extensive experience in artificial intelligence and software engineering, Julio is passionate about creating solutions that bridge cutting-edge technology with real-world needs. He is currently pursuing a Master’s degree in Robotics at the Military Institute of Engineering in Rio de Janeiro, Brazil, where his research focuses on developing Deep Reinforcement Learning algorithms for drone swarm control. Julio founded OkanFit as a way to share his work and ideas with the world—revealing the creativity and beauty of applying AI to solve meaningful real-world challenges. Through OkanFit, his mission is to make artificial intelligence more accessible, practical, and inspiring for everyone.",
+  "mission_statement_part1": "Welcome to OkanFit. Our mission is to develop innovative solutions built on a robust AI stack, always focusing on meeting real user needs. Guided by the principle of Occam's Razor, we strive for simplicity and efficiency in every product we create. ",
+  "mission_statement_part2": "We are passionate about sharing our projects and the concepts behind our solutions, aiming to inspire others to craft their own ideas and push the boundaries of what AI can achieve. At OkanFit, we believe that technology should empower people, and we are committed to making AI accessible, practical, and impactful for everyone.",
+  "mission_title": "Mission",
+  "about_title": "About",
+  "privacy_policy_title": "Privacy Policy",
+  "privacy_policy_intro": "OkanFit (\"we\", \"us\", or \"our\") operates the OkanAssist app and related services. We are committed to protecting your privacy and handling your data transparently.",
+  "privacy_policy_collect": "We may collect personal information such as your name, email address, and payment details when you register, subscribe, or use our services.",
+  "privacy_policy_use": "We use your information to provide and improve our services, process payments, communicate with you, and comply with legal obligations.",
+  "privacy_policy_share": "We do not sell your personal information. We may share data with trusted third parties (such as payment processors like Stripe) only as necessary to provide our services.",
+  "privacy_policy_security": "We implement reasonable security measures to protect your data. However, no method of transmission over the Internet is 100% secure.",
+  "privacy_policy_rights": "You may request access to, correction of, or deletion of your personal information by contacting us at okanfit.ai@gmail.com.",
+  "privacy_policy_changes": "We may update this Privacy Policy from time to time. Changes will be posted on this page.",
+  "privacy_policy_contact": "If you have any questions, contact us at okanfit.ai@gmail.com.",
+
+  "terms_title": "Terms of Service",
+  "terms_accept": "By using OkanAssist, you agree to these Terms of Service. If you do not agree, do not use our services.",
+  "terms_use": "You must be at least 18 years old to use OkanAssist. You agree to use the service only for lawful purposes.",
+  "terms_subscriptions": "Some features require a paid subscription. Payments are processed securely via Stripe. You are responsible for all charges associated with your account.",
+  "terms_security": "You are responsible for maintaining the confidentiality of your account credentials.",
+  "terms_termination": "We may suspend or terminate your access to OkanAssist at any time for violation of these terms.",
+  "terms_changes": "We may update these Terms of Service at any time. Continued use of the service means you accept the new terms.",
+  "terms_contact": "For questions, contact us at okanfit.ai@gmail.com."
 }
