--- a/src/locales/pt/translation.json
+++ b/src/locales/pt/translation.json
@@ -4,5 +4,30 @@
   "news": "Notícias",
   "privacyPolicy": "Política de Privacidade",
   "termsOfService": "Termos de Serviço",
-  "OkanAssist_announcement": "Estamos entusiasmados em anunciar o lançamento do OkanAssist, seu agente pessoal de IA para ajudar a rastrear despesas diárias e tarefas sem esforço. Mantenha-se organizado e no controle de suas finanças e produtividade."
+  "announcements": "Atualizações",
+  "contactUs": "Entre em Contato",
+  "slogan": "Aperfeiçoando a IA para atender às suas necessidades",
+  "OkanAssist_announcement": "Estamos entusiasmados em anunciar o lançamento do OkanAssist, seu agente pessoal de IA para ajudar a rastrear despesas diárias e tarefas sem esforço. Mantenha-se organizado e no controle de suas finanças e produtividade.",
+  "about_founder": "Com uma sólida formação em Engenharia de computação e ampla experiência em inteligência artificial e engenharia de software, Julio é motivado por criar soluções que conectam tecnologia de ponta com necessidades do mundo real. Atualmente, ele está cursando um mestrado em Robótica no Instituto Militar de Engenharia no Rio de Janeiro, Brasil, onde sua pesquisa se concentra no desenvolvimento de algoritmos de Aprendizado por Reforço Profundo para o controle de enxames de drones. Julio fundou a OkanFit como uma forma de compartilhar seu trabalho e ideias com o mundo— revelando a criatividade e a beleza de aplicar IA para resolver desafios significativos do mundo real. Através da OkanFit, sua missão é tornar a inteligência artificial mais acessível, prática e inspiradora para todos.",
+  "mission_statement_part1": "Bem-vindo à OkanFit. Nossa missão é desenvolver soluções inovadoras construídas sobre os fundamentos de IA, sempre focando em atender às necessidades reais dos usuários. Guiados pelo princípio da Navalha de Occam, buscamos simplicidade e eficiência em cada produto que criamos.",
+  "mission_statement_part2": "Somos entusiasmados por compartilhar nossos projetos e os conceitos por trás de nossas soluções, visando inspirar outros a criar suas próprias ideias e expandir os limites do que a IA pode alcançar. Na OkanFit, acreditamos que a tecnologia deve capacitar as pessoas, e estamos comprometidos em tornar a IA acessível, prática e impactante para todos.",
+  "mission_title": "Missão",
+  "privacy_policy_title": "Política de Privacidade",
+  "privacy_policy_intro": "A OkanFit (\"nós\") opera o aplicativo OkanAssist e serviços relacionados. Estamos comprometidos em proteger sua privacidade e tratar seus dados com transparência.",
+  "privacy_policy_collect": "Podemos coletar informações pessoais como nome, e-mail e dados de pagamento quando você se cadastra, assina ou utiliza nossos serviços.",
+  "privacy_policy_use": "Usamos suas informações para fornecer e melhorar nossos serviços, processar pagamentos, nos comunicar com você e cumprir obrigações legais.",
+  "privacy_policy_share": "Não vendemos suas informações pessoais. Podemos compartilhar dados com terceiros confiáveis (como processadores de pagamento como Stripe) apenas quando necessário para fornecer nossos serviços.",
+  "privacy_policy_security": "Implementamos medidas razoáveis de segurança para proteger seus dados. No entanto, nenhum método de transmissão pela Internet é 100% seguro.",
+  "privacy_policy_rights": "Você pode solicitar acesso, correção ou exclusão de suas informações pessoais entrando em contato pelo e-mail okanfit.ai@gmail.com.",
+  "privacy_policy_changes": "Podemos atualizar esta Política de Privacidade periodicamente. Mudanças serão publicadas nesta página.",
+  "privacy_policy_contact": "Se você tiver dúvidas, entre em contato pelo e-mail okanfit.ai@gmail.com.",
+
+  "terms_title": "Termos de Serviço",
+  "terms_accept": "Ao usar o OkanAssist, você concorda com estes Termos de Serviço. Se não concordar, não utilize nossos serviços.",
+  "terms_use": "Você deve ter pelo menos 18 anos para usar o OkanAssist. Concorda em usar o serviço apenas para fins legais.",
+  "terms_subscriptions": "Alguns recursos exigem assinatura paga. Os pagamentos são processados com segurança via Stripe. Você é responsável por todas as cobranças associadas à sua conta.",
+  "terms_security": "Você é responsável por manter a confidencialidade de suas credenciais de acesso.",
+  "terms_termination": "Podemos suspender ou encerrar seu acesso ao OkanAssist a qualquer momento em caso de violação destes termos.",
+  "terms_changes": "Podemos atualizar estes Termos de Serviço a qualquer momento. O uso contínuo do serviço significa que você aceita os novos termos.",
+  "terms_contact": "Para dúvidas, entre em contato pelo e-mail okanfit.ai@gmail.com."
 }
